[package]
name = "adventofcode-2020"
version = "0.1.0"
authors = ["matt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
recap = "0.1.1"
serde = "1.0.118"
structopt = "0.3.21"
tokio = { version = "0.3.6", features = ["full"]}
