[package]
name = "adventofcode-2020"
version = "0.1.0"
authors = ["matt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6.0"
futures = "0.3"
recap = "0.1.1"
structopt = "0.3.21"
tokio = { version = "0.3.6", features = ["full"]}
tokio-util = { version = "0.5.1", features = ["codec", "io"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1.4.3"
